--- a/functions/views/calendario.pug
+++ b/functions/views/calendario.pug
@@ -37,7 +37,7 @@ block missHead
     }
 
 block precontent
-  // Event Info modal
+  //- Event Info modal
   #mdlEventInfo.modal.fade(tabindex='-1' role='dialog' aria-labelledby='mdlEventInfoL' aria-hidden='true')
     .modal-dialog.modal-dialog-centered.modal-dialog-scrollable
       .modal-content
