--- a/functions/views/galleta.pug
+++ b/functions/views/galleta.pug
@@ -9,7 +9,7 @@ block missHead
   - const site="cookie";
 
 block precontent
-  // Report modal
+  //- Report modal
   #mdlRprt.modal.fade(tabindex='-1' role='dialog' aria-labelledby='mdlRprtL' aria-hidden='true' data-backdrop='static')
     .modal-dialog.modal-dialog-centered
       .modal-content
@@ -89,7 +89,7 @@ block content
               figcaption.figcaption !{item.caption}
       //- Add more@#
 
-  // Like&Fav
+  //- Like&Fav
   #btnsFL.row.justify-content-start.mb-2
     .col-auto
       button#btnFav.btn.btn-outline-light.p-1.disabled.mt-2.mx-2
@@ -101,7 +101,7 @@ block content
         | Dar me gusta 
         i#btnLikeTxt.far.fa-thumbs-up
         span#likeCount.badge.badge-dark.m-2
-  // Comentarios
+  //- Comentarios
   .row
     button#btnLdComs.btn.btn-block.btn-scckie.mb-2.disabled Cargar comentarios
     #spnCom.container-fluid.d-none
