--- a/functions/views/mailPrev.pug
+++ b/functions/views/mailPrev.pug
@@ -8,14 +8,14 @@ html(xmlns='http://www.w3.org/1999/xhtml' xmlns:v='urn:schemas-microsoft-com:vml
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(name='format-detection' content='telephone=no')
     meta(name='x-apple-disable-message-reformatting')
-    // Firebase app
+    //- Firebase app
     script(src='https://www.gstatic.com/firebasejs/'+FBVERSION+'/firebase-app.js')
-    // Firebase features
+    //- Firebase features
     script(src='https://www.gstatic.com/firebasejs/'+FBVERSION+'/firebase-auth.js')
     script(src='https://www.gstatic.com/firebasejs/'+FBVERSION+'/firebase-functions.js')
-    // Initialize Firebase
+    //- Initialize Firebase
     script.
-      // Your web app's Firebase configuration
+      //- Your web app's Firebase configuration
       var firebaseConfig = {
       apiKey: "AIzaSyCc5LmjPpufLuHzR6RiXR7awOdGuWpztTk",
       authDomain: "sciencecookies.net",
@@ -26,7 +26,7 @@ html(xmlns='http://www.w3.org/1999/xhtml' xmlns:v='urn:schemas-microsoft-com:vml
       appId: "1:906770471712:web:c7a2c16bac19b6c2d7d545",
       measurementId: "G-1MYVREMBFV"
       };
-      // Initialize Firebase
+      //- Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     title Nueva galleta
     style(type='text/css').
