--- a/src/calendarios.pug
+++ b/src/calendarios.pug
@@ -19,7 +19,7 @@ block content
         button#pgTNxt.page-link.text-light.bg-transparent(aria-label='pgTNxt')
           span(aria-hidden='true') »
 
-  // Cards
+  //- Cards
   #crdContainer.row.row-cols-1.row-cols-sm-2.row-cols-md-1.row-cols-lg-2.row-cols-xl-3
 
   nav#pgNavB.d-none(aria-label='pageNavB')
