--- a/src/drafts.pug
+++ b/src/drafts.pug
@@ -8,7 +8,7 @@ block missHead
   - const site="drafts";
 
 block precontent
-  // Plus modal
+  //- Plus modal
   #mdlPlus.modal.fade(tabindex='-1' aria-labelledby='mdlPlusL' aria-hidden='true')
     #alrtPlusContainer
     .modal-dialog.modal-dialog-centered
@@ -32,7 +32,7 @@ block precontent
         .modal-footer
           button#btnCanPlus0.btn.btn-secondary.btn-block(type='button' data-dismiss='modal') Cancelar
 
-  // Side toolbar
+  //- Side toolbar
   .tbar.tbar-right.btn-toolbar.mb-3(role='toolbar')
     .btn-group-vertical.mr-2.btn-group-lg(role='group')
       button#btnPlus.btn.btn-scckie(type='button')
@@ -64,7 +64,7 @@ block content
         button#pgTNxt.page-link.text-light.bg-transparent(aria-label='pgTNxt')
           span(aria-hidden='true') »
 
-  // Cards
+  //- Cards
   #crdContainer.row.row-cols-1.row-cols-sm-2.row-cols-md-1.row-cols-lg-2.row-cols-xl-3
 
   nav#pgNavB.d-none(aria-label='pageNavB')
