--- a/src/editar-calendario.pug
+++ b/src/editar-calendario.pug
@@ -6,7 +6,7 @@ block missHead
   - const site="calEdit";
 
 block precontent
-  // Publish modal
+  //- Publish modal
   #mdlPublish.modal.fade(tabindex='-1' role='dialog' aria-labelledby='mdlPublishL' aria-hidden='true')
     .modal-dialog.modal-dialog-centered.modal-dialog-scrollable
       .modal-content
@@ -23,7 +23,7 @@ block precontent
           button#btnCnfPublish.btn.btn-scckie.btn-block(type='button') Publicar
           button#btnCanPublish0.btn.btn-secondary.btn-block(type='button' data-dismiss='modal') Cancelar
 
-  // Event Info modal
+  //- Event Info modal
   #mdlEventInfo.modal.fade(tabindex='-1' role='dialog' aria-labelledby='mdlEventInfoL' aria-hidden='true')
     .modal-dialog.modal-dialog-centered.modal-dialog-scrollable
       .modal-content
@@ -38,7 +38,7 @@ block precontent
             i.fas.fa-arrow-right
         #eventInfoCont.overflow-auto
 
-  // Side toolbar
+  //- Side toolbar
   .tbar.tbar-right.btn-toolbar.mb-3(role='toolbar')
     .btn-group-vertical.mr-2.btn-group-lg(role='group')
       a#btnPrevCal.btn.btn-scckie(target="_blank")
