--- a/src/index.pug
+++ b/src/index.pug
@@ -2,8 +2,8 @@ extends layouts/main
 
 block missHead
 
-  // Adsense
-  script(data-ad-client='ca-pub-7663681425693792' async='' src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+  //- Adsense
+  //- script(data-ad-client='ca-pub-7663681425693792' async='' src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
 
   meta(name='description' content='Artículos de ciencia con chispas de chocolate. Artículos de difusión científica y sobre curiosidades.')
   link(rel='canonical' href=HOST)
@@ -20,7 +20,7 @@ block content
         .form-check
           input#catA.form-check-input(type='checkbox')
           label.form-check-label(for='catA') Todas
-      // Categorías@#
+      //- Categorías@#
       .form-row.justify-content-around
         .form-group.col-auto
           .form-check
