--- a/functions/views/includes/register.pug
+++ b/functions/views/includes/register.pug
@@ -1,4 +1,4 @@
-// Register modal
+//- Register modal
 #mdlRgstr.modal.fade(data-backdrop='static' data-keyboard='false' tabindex='-1' role='dialog' aria-labelledby='mdlRgsL' aria-hidden='true')
     .modal-dialog.modal-dialog-centered
         .modal-content
