--- a/src/includes/head.pug
+++ b/src/includes/head.pug
@@ -6,7 +6,7 @@ meta(name='google-site-verification' content='pffq0MGMyrYBsgL7f9drofhXb0nfHmqE8-
 link(rel='shortcut icon' href=HOST+'/img/logoT.svg')
 
 
-// Clarity tracking code for https://sciencecookies.net/
+//- Clarity tracking code for https://sciencecookies.net/
 script.
     (function(c,l,a,r,i,t,y){
     c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -14,11 +14,11 @@ script.
     y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
     })(window, document, "clarity", "script", "56t5m147ti");
 
-// Font awesome
+//- Font awesome
 script(src='https://kit.fontawesome.com/cf642fd47e.js' crossorigin='anonymous')
 
-// Bootstrap
+//- Bootstrap
 link(rel='stylesheet' href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin='anonymous')
 
-// Google fonts
+//- Google fonts
 link(href='https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap' rel='stylesheet')
