--- a/src/includes/nav.pug
+++ b/src/includes/nav.pug
@@ -1,4 +1,4 @@
-// Navbar
+//- Navbar
 nav.navbar.sticky-top.navbar-expand-lg.navbar-dark(style='background-color: #791acd;')
     img.d-inline-block.align-center.mr-2(src='/img/wlogoT.svg' height='30' alt='Science Cookies Logo' loading='lazy')
     a.navbar-brand(href=HOST) Science Cookies
@@ -41,5 +41,5 @@ nav.navbar.sticky-top.navbar-expand-lg.navbar-dark(style='background-color: #791
                     button#btnLgI.btn.btn-link.text-decoration-none.text-light.d-none(data-toggle='modal' data-target='#mdlRgstr') Acceder
 
 
-// Alertas
+//- Alertas
 #alrtClsSsn
