--- a/src/perfil.pug
+++ b/src/perfil.pug
@@ -8,7 +8,7 @@ block missHead
   - const site="profile";
 
 block precontent
-  // Change nick mdl
+  //- Change nick mdl
   #mdlCngNck.modal.fade(tabindex='-1' role='dialog' aria-labelledby='mdlCngNckL' aria-hidden='true')
     .modal-dialog.modal-dialog-centered
       .modal-content
@@ -24,7 +24,7 @@ block precontent
             button.btn.btn-primary.btn-block(type='submit') Confirmar
         .modal-footer
           button.btn.btn-secondary.btn-block(type='button' data-dismiss='modal' onclick='resetFrm();') Cancelar
-  // Change prflPic mdl
+  //- Change prflPic mdl
   #mdlCngPP.modal.fade(tabindex='-1' role='dialog' aria-labelledby='mdlCngPPL' aria-hidden='true')
     .modal-dialog.modal-dialog-centered
       .modal-content
