--- a/src/includes/adsH.pug
+++ b/src/includes/adsH.pug
@@ -1,1 +1,1 @@
-#adsH.row.bg-info.px-2.text-dark.d-sm-none.justify-content-center
+#adsH.row.bg-scinfo.px-2.text-dark.d-sm-none.justify-content-center
