--- a/src/layouts/main.pug
+++ b/src/layouts/main.pug
@@ -30,5 +30,5 @@ html(lang='es')
 
     include ../includes/bottom
 
-    script(src='/js/global.js')
+    //script(src='/js/global.js')
     block ownjs
