--- a/src/includes/adsV.pug
+++ b/src/includes/adsV.pug
@@ -1,1 +1,1 @@
-#adsV.col-2.py-md-3.d-none.d-sm-block.bg-info.sidebar.text-dark.text-center.justify-content-center.px-1.px-lg-2
+#adsV.col-2.py-md-3.d-none.d-sm-block.bg-info.text-dark.text-center.justify-content-center.px-1.px-lg-2
