--- a/functions/views/calendario.pug
+++ b/functions/views/calendario.pug
@@ -2,7 +2,7 @@ extends layouts/main
 
 block missHead
   meta(name='description' content= descriptionShort)
-  link(rel='canonical' href=HOST+'/calendario-astronomico/'+year+'/'+month)
+  link(rel='canonical' href=HOST+'/calendario-astronomico/'+year+'/'+month+'/')
   title #{title} - Science Cookies
 
   - const site="cal";
