--- a/functions/views/galleta.pug
+++ b/functions/views/galleta.pug
@@ -2,7 +2,7 @@ extends layouts/main
 
 block missHead
   meta(name='description' content= description)
-  link(rel='canonical' href=HOST+'/galletas/'+month+'/'+file)
+  link(rel='canonical' href=HOST+'/galletas/'+month+'/'+file+'/')
   title #{title} - Science Cookies
   link(rel="stylesheet" href=HOST+"/styles/cookie.css")
 
