--- a/functions/views/includes/head.pug
+++ b/functions/views/includes/head.pug
@@ -1,9 +1,7 @@
-include ../config/config
-
 meta(charset='utf-8')
 meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
 meta(name='google-site-verification' content='pffq0MGMyrYBsgL7f9drofhXb0nfHmqE8-h1YZf83xA')
-link(rel='shortcut icon' href=HOST+'/img/logoT.svg')
+link(rel='shortcut icon' href='/img/logoT.svg')
 
 
 //- Clarity tracking code for https://sciencecookies.net/
