--- a/src/404.pug
+++ b/src/404.pug
@@ -1,7 +1,7 @@
 extends layouts/main
 
 block missHead
-  link(rel='canonical' href=HOST+'/404')
+  link(rel='canonical' href=HOST+'/404/')
   title Science Cookies - Página no encontrada
 
   - const site="404";
