--- a/src/calendarios.pug
+++ b/src/calendarios.pug
@@ -2,7 +2,7 @@ extends layouts/main
 
 block missHead
   meta(name='description' content='Revisa y edita los calendarios')
-  link(rel='canonical' href=HOST+'/calendarios')
+  link(rel='canonical' href=HOST+'/calendarios/')
   title Science Cookies - Calendarios
 
   - const site="calDrafts";
