--- a/src/contacto.pug
+++ b/src/contacto.pug
@@ -2,7 +2,7 @@ extends layouts/main
 
 block missHead
   meta(name='description' content='¿Tienes alguna sugerencia o duda? ¿Quieres reportar un fallo? Aquí puedes hacerlo.')
-  link(rel='canonical' href=HOST+'/contacto')
+  link(rel='canonical' href=HOST+'/contacto/')
   title Science Cookies - Contacto
 
   - const site="contact";
