--- a/src/drafts.pug
+++ b/src/drafts.pug
@@ -2,7 +2,7 @@ extends layouts/main
 
 block missHead
   meta(name='description' content='Revisa y administra tus borradores')
-  link(rel='canonical' href=HOST+'/drafts')
+  link(rel='canonical' href=HOST+'/drafts/')
   title Science Cookies - Borradores
 
   - const site="drafts";
