--- a/src/editar-calendario.pug
+++ b/src/editar-calendario.pug
@@ -62,7 +62,7 @@ block content
     .row.mb-2.justify-content-center
       label.col-12.col-form-label Imagen
       figure.col-9.col-xl-6.mb-3.p-0(style='position: relative; border-radius: 0.25rem;')
-        img#prevMed.card-img.m-0(src='/img/noimg.png' onerror="this.src='/noimg.d0bf9177.png'")
+        img#prevMed.card-img.m-0(src='https://via.placeholder.com/200' onerror="this.src='https://via.placeholder.com/200'")
         .card-img-overlay.pt-0(style='padding-left: 0.9rem; padding-right: 0.9rem;')
           .row.mb-2.p-0
             button#btnChgImg.btn.btn-light.btn-scckie.btn-sm.ml-auto
