--- a/src/index.pug
+++ b/src/index.pug
@@ -6,7 +6,7 @@ block missHead
   //- script(data-ad-client='ca-pub-7663681425693792' async='' src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
 
   meta(name='description' content='Artículos de ciencia con chispas de chocolate. Artículos de difusión científica y sobre curiosidades.')
-  link(rel='canonical' href=HOST)
+  link(rel='canonical' href=HOST+'/')
   title Science Cookies - Artículos de ciencia con chispas de chocolate 
 
   - const site="index";
