--- a/src/quienes-somos.pug
+++ b/src/quienes-somos.pug
@@ -2,7 +2,7 @@ extends layouts/main
 
 block missHead
   meta(name='description' content='En este blog escribimos artículos de difusión científica y sobre curiosidades y esperamos lograr alimentar la curiosidad.')
-  link(rel='canonical' href=HOST+'/quienes-somos')
+  link(rel='canonical' href=HOST+'/quienes-somos/')
   title Science Cookies - ¿Quiénes somos?
 
   - const site="who";
