--- a/functions/views/includes/banner.pug
+++ b/functions/views/includes/banner.pug
@@ -1,6 +1,6 @@
 .row.justify-content-center.mt-3.mb-4.align-items-center
     .col-10.col-sm-5.col-xl-3
-        img.w-100(src=HOST+'/img/logoT.svg' alt='Science Cookies Logo' loading='lazy')
+        img.w-100(src='/img/logoT.svg' alt='Science Cookies Logo' loading='lazy')
     .col-12.col-sm-6.col-xl-4
         h1.text-center(style='font-size: 2.8rem;') SCIENCE COOKIES
         h2.text-center(style='font-size: 1rem;') Artículos de ciencia con chispas de chocolate
