--- a/src/includes/nav.pug
+++ b/src/includes/nav.pug
@@ -1,7 +1,7 @@
 //- Navbar
 nav.navbar.sticky-top.navbar-expand-lg.navbar-dark.bg-sc
-    img.d-inline-block.align-center.mr-2(src=HOST+'/img/wlogoT.svg' width='30' height='30' alt='Science Cookies Logo')
-    a.navbar-brand(href=HOST) Science Cookies
+    img.d-inline-block.align-center.mr-2(src='/img/wlogoT.svg' width='30' height='30' alt='Science Cookies Logo')
+    a.navbar-brand(href='/') Science Cookies
     button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarM' aria-controls='navbarM' aria-expanded='false' aria-label='Toggle navigation')
         span.navbar-toggler-icon
     #navbarM.collapse.navbar-collapse
