--- a/src/layouts/main.pug
+++ b/src/layouts/main.pug
@@ -1,3 +1,11 @@
+//- Config
+- const HOST = "https://sciencecookies--pr34-footer-k1fbe1da.web.app";
+//-    https://sciencecookies.net
+//-    http://localhost:5000
+- const FBVERSION = "8.3.2";
+- const FBUIVERSION = "4.8.0";
+
+
 doctype html
 html(lang='es')
   head
@@ -5,7 +13,8 @@ html(lang='es')
 
     block missHead
 
-    link(rel="stylesheet" href="/styles/main.scss")
+    link(rel="stylesheet" href=HOST+"/styles/main.css")
+
   body
     include ../includes/nav
 
@@ -30,5 +39,5 @@ html(lang='es')
 
     include ../includes/bottom
 
-    //script(src='/js/global.js')
+    script(src='/js/global.js')
     block ownjs
