--- a/src/perfil.pug
+++ b/src/perfil.pug
@@ -2,7 +2,7 @@ extends layouts/main
 
 block missHead
   meta(name='description' content='Tu perfíl de Science Cookies. Aquí puedes ver las galletas que te gustan y tus favoritas y cambiar algunas preferencias.')
-  link(rel='canonical' href=HOST+'/perfil')
+  link(rel='canonical' href=HOST+'/perfil/')
   title Science Cookies - Perfíl
 
   - const site="profile";
