--- a/src/layouts/main.pug
+++ b/src/layouts/main.pug
@@ -1,8 +1,6 @@
 //- Config
-- const HOST = "https://sciencecookies--pr34-footer-k1fbe1da.web.app";
+- const HOST = "https://sciencecookies.net";
 //-    https://sciencecookies.net
-//-    http://localhost:5000
-//-    https://sciencecookies--pr34-footer-k1fbe1da.web.app
 - const FBVERSION = "8.3.2";
 - const FBUIVERSION = "4.8.0";
 
