--- a/src/calendarios.pug
+++ b/src/calendarios.pug
@@ -5,7 +5,7 @@ block missHead
   link(rel='canonical' href=HOST+'/calendarios/')
   title Science Cookies - Calendarios
 
-  - const site="calDrafts";
+  - const site="draftsCal";
 
 block content
   nav#pgNavT.d-none(aria-label='pageNavT')
