--- a/functions/views/mailPrevCal.pug
+++ b/functions/views/mailPrevCal.pug
@@ -29,6 +29,8 @@ html(xmlns='http://www.w3.org/1999/xhtml' xmlns:v='urn:schemas-microsoft-com:vml
       //- Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     title Calendario astronómico del mes
+    - const site="mailPrev";
+    script window.site = "#{site}";
     style(type='text/css').
       @media screen {
       @font-face {
