--- a/functions/views/includes/adsH.pug
+++ b/functions/views/includes/adsH.pug
@@ -3,15 +3,15 @@
         h5.text-center.mx-auto Publicidad
     .col-6.px-1
         a(href='https://www.instagram.com/p/CDLE_t6nsdU/?igshid=ttb1h94rs65' rel='sponsored')
-            img.w-100.mb-2(src='https://sciencecookies.net/publicidad/CubreMid.webp' alt='Cubre Mid')
+            img.w-100.mb-2(src=HOST+'/publicidad/CubreMid.webp' alt='Cubre Mid')
         a(href='https://www.instagram.com/_pedacitode_cielo/' rel='sponsored')
-            img.w-100.mb-2(src='https://sciencecookies.net/publicidad/PedacitoDeCielo.webp' alt='Pedacito de Cielo')
+            img.w-100.mb-2(src=HOST+'/publicidad/PedacitoDeCielo.webp' alt='Pedacito de Cielo')
         a(href='https://www.instagram.com/p/CC_2AELnaMi/?igshid=yp0v3i285a37' rel='sponsored')
-            img.w-100(src='https://sciencecookies.net/publicidad/Lool-Ha1.webp' alt='Lool-Ha')
-            img.w-100(src='https://sciencecookies.net/publicidad/Lool-Ha2.webp' alt='Lool-Ha')
-            img.w-100.mb-2(src='https://sciencecookies.net/publicidad/Lool-Ha3.webp' alt='Lool-Ha')
+            img.w-100(src=HOST+'/publicidad/Lool-Ha1.webp' alt='Lool-Ha')
+            img.w-100(src=HOST+'/publicidad/Lool-Ha2.webp' alt='Lool-Ha')
+            img.w-100.mb-2(src=HOST+'/publicidad/Lool-Ha3.webp' alt='Lool-Ha')
     .col-6.px-1
         a(href='https://www.google.com/url?sa=t&source=web&rct=j&url=https://www.instagram.com/awesomefundas/&ved=2ahUKEwi7pZiOvfjqAhUD2qwKHSV_ChQQFjAAegQIBhAC&usg=AOvVaw072K32mWOHN9b7u3cEzrcd' rel='sponsored')
-            img.w-100.mb-2(src='https://sciencecookies.net/publicidad/AwesomeFundas.webp' alt='Awesome Fundas')
+            img.w-100.mb-2(src=HOST+'/publicidad/AwesomeFundas.webp' alt='Awesome Fundas')
         a(href='https://m.facebook.com/pages/category/Beauty-Supply-Store/mondlermid-100749941724343/' rel='sponsored')
-            img.w-100.mb-2(src='https://sciencecookies.net/publicidad/Mondler.webp' alt='Mondler')
+            img.w-100.mb-2(src=HOST+'/publicidad/Mondler.webp' alt='Mondler')
