--- a/src/layouts/main.pug
+++ b/src/layouts/main.pug
@@ -1,5 +1,5 @@
 //- Config
-- const HOST = "https://sciencecookies--pr35-translations-mofurpft.web.app";
+- const HOST = "http://localhost:5000";
 //-   https://sciencecookies.net
 //-   http://localhost:5000
 //-   https://sciencecookies--pr35-translations-mofurpft.web.app
