--- a/src/docs/privacidad.pug
+++ b/src/docs/privacidad.pug
@@ -1,5 +1,8 @@
 extends ../layouts/main
 
+block lang
+  - const LANG = "es";
+
 block missHead
   meta(name='description' content='Política de privacidad de Science Cookies')
   link(rel='canonical' href=HOST+'/privacidad')
