--- a/src/docs/tos.pug
+++ b/src/docs/tos.pug
@@ -1,5 +1,8 @@
 extends ../layouts/main
 
+block lang
+  - const LANG = "es";
+
 block missHead
   meta(name='description' content='Términos de servicio de Science Cookies')
   link(rel='canonical' href=HOST+'/tos')
