--- a/functions/views/includes/banner.pug
+++ b/functions/views/includes/banner.pug
@@ -3,4 +3,7 @@
         img.w-100(src='/img/logoT.svg' alt='Science Cookies Logo' loading='lazy')
     .col-12.col-sm-6.col-xl-4
         h1.text-center(style='font-size: 2.8rem;') SCIENCE COOKIES
-        h2.text-center(style='font-size: 1rem;') Artículos de ciencia con chispas de chocolate
+        if LANG=="es" 
+            h2.text-center(style='font-size: 1rem;') Artículos de ciencia con chispas de chocolate
+        else if LANG=="en" 
+            h2.text-center(style='font-size: 1rem;') Science articles with chocolate chips
