--- a/functions/views/includes/foot.pug
+++ b/functions/views/includes/foot.pug
@@ -25,41 +25,40 @@ footer.bg-scinfo
             ul.no-list
                 li
                     if site=="index"
-                        a.text-decoration-none.text-black.mx-2.my-1(href='/') Inicio
+                        a.text-decoration-none.text-black.mx-2.my-1(href='/') #{Buttons[LANG]["index"]}
                     else
-                        a.text-decoration-none.text-dark.mx-2.my-1(href='/') Inicio
+                        a.text-decoration-none.text-dark.mx-2.my-1(href='/') #{Buttons[LANG]["index"]}
                 li
                     if site=="arch"
-                        a.text-decoration-none.text-black.mx-2.my-1(href='/archivo/') Archivo
+                        a.text-decoration-none.text-black.mx-2.my-1(href='/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
                     else
-                        a.text-decoration-none.text-dark.mx-2.my-1(href='/archivo/') Archivo
+                        a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
                 li
-                    if site=="cal"
-                        a.text-decoration-none.text-black.mx-2.my-1(href='/calendario-astronomico/') Calendario Astronómico
+                    if site=="draftsCal"
+                        a.text-decoration-none.text-black.mx-2.my-1(href='/'+NavLinks[LANG]["draftsCal"]) #{Buttons[LANG]["draftsCal"]}
                     else
-                        a.text-decoration-none.text-dark.mx-2.my-1(href='/calendario-astronomico/') Calendario Astronómico
+                        a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["draftsCal"]) #{Buttons[LANG]["draftsCal"]}
         .col-md-auto
             ul.no-list
                 li
                     if site=="who"
-                        a.text-decoration-none.text-black.mx-2.my-1(href='/quienes-somos/') ¿Quienes somos?
+                        a.text-decoration-none.text-black.mx-2.my-1(href='/'+NavLinks[LANG]["who"]) #{Buttons[LANG]["who"]}
                     else
-                        a.text-decoration-none.text-dark.mx-2.my-1(href='/quienes-somos/') ¿Quienes somos?
+                        a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["who"]) #{Buttons[LANG]["who"]}
                 li
                     if site=="contact"
-                        a.text-decoration-none.text-black.mx-2.my-1(href='/contacto/') Contacto
+                        a.text-decoration-none.text-black.mx-2.my-1(href='/'+NavLinks[LANG]["contact"]) #{Buttons[LANG]["contact"]}
                     else
-                        a.text-decoration-none.text-dark.mx-2.my-1(href='/contacto/') Contacto
+                        a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["contact"]) #{Buttons[LANG]["contact"]}
         .col-md-auto
             ul.no-list
                 li
                     if site=="priv"
-                        a.text-decoration-none.text-black.mx-2.my-1(href='/docs/privacidad/') Aviso de privacidad
+                        a.text-decoration-none.text-black.mx-2.my-1(href='/'+NavLinks[LANG]["priv"]) #{Buttons[LANG]["priv"]}
                     else
-                        a.text-decoration-none.text-dark.mx-2.my-1(href='/docs/privacidad/') Aviso de privacidad
+                        a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["priv"]) #{Buttons[LANG]["priv"]}
                 li
                     if site=="tos"
-                        a.text-decoration-none.text-black.mx-2.my-1(href='/docs/tos/') Términos de servicio
+                        a.text-decoration-none.text-black.mx-2.my-1(href='/'+NavLinks[LANG]["tos"]) #{Buttons[LANG]["tos"]}
                     else
-                        a.text-decoration-none.text-dark.mx-2.my-1(href='/docs/tos/') Términos de servicio
-                li
+                        a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["tos"]) #{Buttons[LANG]["tos"]}
