--- a/functions/views/includes/nav.pug
+++ b/functions/views/includes/nav.pug
@@ -7,30 +7,33 @@ nav.navbar.sticky-top.navbar-expand-lg.navbar-dark.bg-sc
     #navbarM.collapse.navbar-collapse
         ul.navbar-nav.mr-auto.py-0
             if site=="index"
-                a.btn.btn-dark.mx-2.my-1.active(href='/') Inicio
+                a.btn.btn-dark.mx-2.my-1.active(href='/') #{Buttons[LANG]["index"]}
             else
-                a.btn.btn-dark.mx-2.my-1(href='/') Inicio
+                a.btn.btn-dark.mx-2.my-1(href='/') #{Buttons[LANG]["index"]}
             if site=="arch"
-                a.btn.btn-dark.mx-2.my-1.active(href='/archivo/') Archivo
+                a.btn.btn-dark.mx-2.my-1.active(href='/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
             else
-                a.btn.btn-dark.mx-2.my-1(href='/archivo/') Archivo
-            if site=="cal"
-                a.btn.btn-dark.mx-2.my-1.active(href='/calendario-astronomico/') Calendario Astronómico
+                a.btn.btn-dark.mx-2.my-1(href='/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
+            if site=="draftsCal"
+                a.btn.btn-dark.mx-2.my-1.active(href='/'+NavLinks[LANG]["draftsCal"]) #{Buttons[LANG]["draftsCal"]}
             else
-                a.btn.btn-dark.mx-2.my-1(href='/calendario-astronomico/') Calendario Astronómico
+                a.btn.btn-dark.mx-2.my-1(href='/'+NavLinks[LANG]["draftsCal"]) #{Buttons[LANG]["draftsCal"]}
             .dropdown.d-flex.flex-column
-                button.btn.btn-dark.mx-2.my-1.flex-fill#usBtnsDrpdwn(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Nosotros
+                if LANG=="es"
+                    button.btn.btn-dark.mx-2.my-1.flex-fill#usBtnsDrpdwn(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Nosotros
+                else if LANG=="en"
+                    button.btn.btn-dark.mx-2.my-1.flex-fill#usBtnsDrpdwn(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Us
                 .dropdown-menu.bg-sc.px-0.mb-2.py-1(aria-labelledby="usBtnsDrpdwn" style="min-width:max-content;")
                     .col-12.px-0.d-flex
                         if site=="who"
-                            a.btn.btn-dark.mx-2.my-1.flex-fill.active(href='/quienes-somos/') ¿Quienes somos?
+                            a.btn.btn-dark.mx-2.my-1.flex-fill.active(href='/'+NavLinks[LANG]["who"]) #{Buttons[LANG]["who"]}
                         else
-                            a.btn.btn-dark.mx-2.my-1.flex-fill(href='/quienes-somos/') ¿Quienes somos?
+                            a.btn.btn-dark.mx-2.my-1.flex-fill(href='/'+NavLinks[LANG]["who"]) #{Buttons[LANG]["who"]}
                     .col-12.px-0.d-flex
                         if site=="contact"
-                            a.btn.btn-dark.mx-2.my-1.flex-fill.active(href='/contacto/') Contacto
+                            a.btn.btn-dark.mx-2.my-1.flex-fill.active(href='/'+NavLinks[LANG]["contact"]) #{Buttons[LANG]["contact"]}
                         else
-                            a.btn.btn-dark.mx-2.my-1.flex-fill(href='/contacto/') Contacto
+                            a.btn.btn-dark.mx-2.my-1.flex-fill(href='/'+NavLinks[LANG]["contact"]) #{Buttons[LANG]["contact"]}
             if site=="edit"||site=="editCal"
                 i.text-light.mx-3.my-auto#tagLstSave
         .row.justify-content-end
@@ -39,13 +42,13 @@ nav.navbar.sticky-top.navbar-expand-lg.navbar-dark.bg-sc
                     i#icnUsr.fas
                     img#picUsr.d-inline-block.align-center.ml-2.rounded-circle(src='' height='30' alt='')
                 .dropdown-menu.dropdown-menu-right.bg-dark.pl-1(aria-labelledby='usrDrpdwn')
-                    a#btnPrfl.btn.btn-link.text-decoration-none.text-light.d-none(href='/perfil/') Mi perfíl
-                    a#btnPref.btn.btn-link.text-decoration-none.text-light.d-none(href='/perfil/?tab=pref') Preferencias
-                    a#btnDraft.btn.btn-link.text-decoration-none.text-light.d-none(href='/drafts/') Borradores
-                    a#btnCals.btn.btn-link.text-decoration-none.text-light.d-none(href='/calendarios/') Calendarios
+                    a#btnPrfl.btn.btn-link.text-decoration-none.text-light.d-none(href='/'+NavLinks[LANG]["profile"]) #{Buttons[LANG]["profile"]}
+                    a#btnPref.btn.btn-link.text-decoration-none.text-light.d-none(href='/'+NavLinks[LANG]["profile"]+'?tab=pref') #{Buttons[LANG]["prefs"]}
+                    a#btnDraft.btn.btn-link.text-decoration-none.text-light.d-none(href='/'+NavLinks[LANG]["drafs"]) #{Buttons[LANG]["drafts"]}
+                    a#btnCals.btn.btn-link.text-decoration-none.text-light.d-none(href='/'+NavLinks[LANG]["draftsCal"]) #{Buttons[LANG]["draftsCal"]}
                     .dropdown-divider.ml-1.mr-2
-                    button#btnLgO.btn.btn-link.text-decoration-none.text-light.d-none Cerrar sesión
-                    button#btnLgI.btn.btn-link.text-decoration-none.text-light.d-none(data-toggle='modal' data-target='#mdlRgstr') Acceder
+                    button#btnLgO.btn.btn-link.text-decoration-none.text-light.d-none #{Buttons[LANG]["logOut"]}
+                    button#btnLgI.btn.btn-link.text-decoration-none.text-light.d-none(data-toggle='modal' data-target='#mdlRgstr') #{Buttons[LANG]["logIn"]}
 
 
 //- Alertas
