--- a/functions/views/includes/register.pug
+++ b/functions/views/includes/register.pug
@@ -3,10 +3,16 @@
     .modal-dialog.modal-dialog-centered
         .modal-content
             .modal-header
-                h5#mdlRgsL.modal-title Inicia sesión o regístrate
+                if LANG=="es" 
+                    h5#mdlRgsL.modal-title Inicia sesión o regístrate
+                else if LANG=="en" 
+                    h5#mdlRgsL.modal-title Log in or register
                 button.close(type='button' data-dismiss='modal' aria-label='Close')
                     span(aria-hidden='true') ×
             .modal-body
                 #firebaseui-auth-container
             .modal-footer
-                button.btn.btn-secondary(type='button' data-dismiss='modal') Cancelar
+                if LANG=="es" 
+                    button.btn.btn-secondary(type='button' data-dismiss='modal') Cancelar
+                else if LANG=="en" 
+                    button.btn.btn-secondary(type='button' data-dismiss='modal') Cancel
