--- a/src/editar-calendario.pug
+++ b/src/editar-calendario.pug
@@ -1,127 +1,6 @@
 extends layouts/main
 
-block missHead
-  title Science Cookies - Editar calendario
+block lang
+  - const LANG = "es";
 
-  - const site="editCal";
-
-block precontent
-  //- Publish modal
-  #mdlPublish.modal.fade(tabindex='-1' role='dialog' aria-labelledby='mdlPublishL' aria-hidden='true')
-    .modal-dialog.modal-dialog-centered.modal-dialog-scrollable
-      .modal-content
-        .modal-header
-          h5#mdlPublishL.modal-title Publicar el calendario
-          button#btnCanPublish1.close(type='button' data-dismiss='modal' aria-label='Close')
-            span(aria-hidden='true') ×
-        .modal-body
-          p#mdlPublishTxt
-          img.d-none(src='' alt='' class='@#')
-          #barPublishCont.progress.my-2.d-none
-            #barPublish.progress-bar.progress-bar-striped.progress-bar-animated(role='progressbar' aria-valuenow='0' aria-valuemin='0' aria-valuemax='100' style='width: 0%')
-        .modal-footer
-          button#btnCnfPublish.btn.btn-scckie.btn-block(type='button') Publicar
-          button#btnCanPublish0.btn.btn-secondary.btn-block(type='button' data-dismiss='modal') Cancelar
-
-  //- Event Info modal
-  #mdlEventInfo.modal.fade(tabindex='-1' role='dialog' aria-labelledby='mdlEventInfoL' aria-hidden='true')
-    .modal-dialog.modal-dialog-centered.modal-dialog-scrollable
-      .modal-content
-        .modal-header
-          h5#mdlEventInfoL.modal-title
-          button.close(type='button' data-dismiss='modal' aria-label='Close')
-            span(aria-hidden='true') ×
-        .row.px-4.py-2
-          button#btnPriorEve.btn.btn-scckie.mr-auto
-            i.fas.fa-arrow-left
-          button#btnNextEve.btn.btn-scckie
-            i.fas.fa-arrow-right
-        #eventInfoCont.overflow-auto
-
-  //- Side toolbar
-  .tbar.tbar-right.btn-toolbar.mb-3(role='toolbar')
-    .btn-group-vertical.mr-2.btn-group-lg(role='group')
-      a#btnPrevCal.btn.btn-scckie(target="_blank")
-        i.fas.fa-eye
-      a#btnPrevMail.btn.btn-scckie(target="_blank")
-        i.fas.fa-envelope
-      button#btnAprove.btn.btn-scckie.d-none
-        i.far.fa-check-square
-      button#btnPub.btn.btn-scckie.d-none(data-toggle='modal' data-target='#mdlPublish')
-        i.fas.fa-paper-plane
-      a#btnSrcCal.btn.btn-scckie.text-decoration-none(target="_blank")
-        i.fas.fa-calendar-day
-      a#btnSrcCal2.btn.btn-scckie.text-decoration-none(target="_blank")
-        i.fas.fa-calendar-day
-      a#btnSrcCal3.btn.btn-scckie.text-decoration-none(target="_blank")
-        i.fas.fa-calendar-day
-
-block content
-  .container-fluid.mb-2.rounded-lg.p-3(style='background-color:#57238b;')
-    h1#title.text-center
-    .row.mb-2.justify-content-center
-      label.col-12.col-form-label Imagen
-      figure.col-9.col-xl-6.mb-3.p-0(style='position: relative; border-radius: 0.25rem;')
-        img#prevMed.card-img.m-0(src='https://via.placeholder.com/200.webp' onerror="this.src='https://via.placeholder.com/200.webp'")
-        .card-img-overlay.pt-0(style='padding-left: 0.9rem; padding-right: 0.9rem;')
-          .row.mb-2.p-0
-            button#btnChgImg.btn.btn-light.btn-scckie.btn-sm.ml-auto
-              i.fas.fa-exchange-alt(aria-hidden='true')
-        br
-        .row
-          .col
-            label Pie de foto
-            input#inPicCapt.form-control(type='text')
-        .row
-          .col
-            label Alt
-            input#inPicAlt.form-control(type='text')
-    #barChgImgCont.progress.mb-2.d-none
-      #barChgImg.progress-bar.progress-bar-striped.progress-bar-animated(role='progressbar' aria-valuenow='0' aria-valuemin='0' aria-valuemax='100' style='width: 0%')
-    form#frmChgImg.d-none
-      .row.mb-3.justify-content-center
-        .form-check.form-check-inline.ml-3
-          input#inMedSrc0.form-check-input(type='radio' name='radsMedSrc' required='')
-          label.form-check-label(for='inMedSrc0') Propio
-        .form-check.form-check-inline.ml-3
-          input#inMedSrc1.form-check-input(type='radio' name='radsMedSrc')
-          label.form-check-label(for='inMedSrc1') Externo
-      #inChgImgFileCont.custom-file.mb-5.d-none
-        input#inChgImg.custom-file-input(type='file')
-        label#inChgImgL.custom-file-label(for='inChgImg' data-browse='Elegir') Subir archivo
-      #inChgImgUrlCont.row.mb-2.d-none
-        .col
-          label(for='inChgImgUrl') URL del archivo
-          input#inChgImgUrl.form-control(type='text' placeholder='https://imagen.com')
-      .row.mb-2.justify-content-center
-        button#btnCanChgImg.btn.btn-secondary.mx-2(type='submit') Cancelar
-        button#btnCnfChgImg.btn.btn-primary.mx-2(type='submit') Aceptar
-    form#frmText
-      .row.mb-2
-        label.col-12.col-form-label Descripción
-        .col
-          textarea#inDesc.form-control(rows='3')
-      .row.mb-2
-        label.col-12.col-form-label Descripción corta
-        .col
-          textarea#inDescShort.form-control(rows='3')
-      .row.mb-2.justify-content-end
-        button.btn.btn-light.btn-link-scckie.mx-3(type='submit')
-          i.fas.fa-check
-  .container-fluid.mb-2.rounded-lg.p-2.overflow-auto(style='background-color:#57238b;')
-    .table-responsive
-      table.table.table-bordered.table-light.rounded
-        thead.thead-dark
-          tr
-            th(style='min-width: 7rem; width: 13%;') Domingo
-            th(style='min-width: 7rem; width: 13%;') Lunes
-            th(style='min-width: 7rem; width: 13%;') Martes
-            th(style='min-width: 7rem; width: 13%;') Miercoles
-            th(style='min-width: 7rem; width: 13%;') Jueves
-            th(style='min-width: 7rem; width: 13%;') Viernes
-            th(style='min-width: 7rem; width: 13%;') Sabado
-        tbody#weeksCont
-
-
-block ownjs
-  script(src='/js/editCal.js')
+include content/editCal
