--- a/src/includes/adsV.pug
+++ b/src/includes/adsV.pug
@@ -1,5 +1,8 @@
 .col-2.py-md-3.d-none.d-sm-block.bg-info.text-dark.text-center.justify-content-center.px-1.px-lg-2
-  h5.text-center.mx-auto Publicidad
+  if LANG=="es" 
+    h5.text-center.mx-auto Publicidad
+  else if LANG=="en"
+    h5.text-center.mx-auto Advertising
   a(href='https://www.instagram.com/p/CDLE_t6nsdU/?igshid=ttb1h94rs65' rel='sponsored')
     img.w-100.mb-2(src=HOST+'/publicidad/CubreMid.webp' alt='Cubre Mid')
   a(href='https://www.instagram.com/_pedacitode_cielo/' rel='sponsored')
