--- a/src/content/contact.pug
+++ b/src/content/contact.pug
@@ -61,11 +61,11 @@ block content
           .col-sm-10
             select#inSubj.form-control(required='')
               option(value='') Choose...
-              option#inOsuger(value='Sugerir una galleta') Sugest a Cookie
-              option#inOfallo(value='Reportar un fallo') Report a bug
-              option#inOtos(value='Sobre los Términos de Servicio') About Terms of Service
-              option#inOpriv(value='Sobre la Política de Privacidad') About Privacy Policy
-              option#inOotro(value='Otro') Other
+              option#inOsuger(value='Sugest a Cookie') Sugest a Cookie
+              option#inOfallo(value='Report a bug') Report a bug
+              option#inOtos(value='About Terms of Service') About Terms of Service
+              option#inOpriv(value='About Privacy Policy') About Privacy Policy
+              option#inOotro(value='Other') Other
         .form-group.row
           label.col-sm-2.col-form-label(for='inText') Message
           .col-sm-10
